[FEATURE] add jitsi meeting

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css"
-    integrity="sha256-D9AvR0EzkNZoWZVSvI3ch+uf/Z5izrIpcbsykVphwPU=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css" integrity="sha256-D9AvR0EzkNZoWZVSvI3ch+uf/Z5izrIpcbsykVphwPU=" crossorigin="anonymous">
   <link rel="stylesheet" href="/spin.css">
 </head>
 
@@ -29,6 +27,7 @@
   </div>
   <script src="https://unpkg.com/array-flat-polyfill"></script>
   <script src="https://js.tappaysdk.com/tpdirect/v5.1.0"></script>
+  <script src='/external_api.js'></script>
 </body>
 
 </html>
