--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
   </div>
   <script src="https://unpkg.com/array-flat-polyfill"></script>
   <script src="https://js.tappaysdk.com/tpdirect/v5.1.0"></script>
-  <script src='/external_api.js'></script>
+  <script src="https://meet.jit.si/external_api.js"></script>
 </body>
 
 </html>
